--- a/clase13/index.html
+++ b/clase13/index.html
@@ -562,8 +562,28 @@
         <p><code> fight(fighterA, fighterB); // returns { rounds: 3, winner: "Chun-Li"} </code></p>
       </li>
       <li>
-        <p><strong><a href="#"> </a></strong>:  .</p>
-        <p><code>  </code></p>
+        <p><strong><a href="#">Búsqueda laboral</a></strong>:</p>
+        <p>Crear una función que dada una persona y una búsqueda de empleo, devuelva true si la persona se ajusta a dicha búsqueda. Ambos objetos tienen la siguiente estructura:</p>
+        <p><code> persona = {
+          experience: 4,
+          languages: ["JavaScript", "HTML","CSS"],
+          location: ["Buenos Aires"],
+          remuneration: 35000
+        }</code></p>
+        <p><code>busqueda = {
+          experience: 1,
+          languages: ["JavaScript", "HTML"],
+          location: ["Buenos Aires"],
+          remuneration: 40000
+        }//return true </code></p>
+        <p>La persona es adecuada si:</p>
+        <p>-tiene igual o más años de experiencia que la búsqueda</p>
+        <p>-los lenguajes que conoce son los que contiene la búsqueda (puede conocer más, pero no afecta en nada)</p>
+        <p>-su locación está incluida dentro de las locaciones posibles de la búsqueda</p>
+        <p>-su remuneración (pretendida) es igual o menor a la de la búsqueda</p>
+        <p>-(Pista) deberia empezar a comprobar si las condiciones mas sencillas se cumplen,como la expiencia o la remuneracion</p>
+        <p>-(Pista) deberia recorrer los array de busqueda y preguntar si estan existen en la persona</p>
+        <p>-(Pista) deberia retornar false a la primera que falla.</p>
       </li>
       <li>
         <p><strong><a href="#"> </a></strong>:  .</p>
