agrego dos ejercicios

--- a/clase13/index.html
+++ b/clase13/index.html
@@ -586,12 +586,12 @@
         <p>-(Pista) deberia retornar false a la primera que falla.</p>
       </li>
       <li>
-        <p><strong><a href="#"> </a></strong>:  .</p>
-        <p><code>  </code></p>
+        <p><strong><a href="#">Unión de objetos</a></strong>:</p>
+        <p>-Crear una función que dos objetos como argumentos, y devuelva un objeto que sea la unión de ambos. Es decir, debe contener las propiedades de ambos objetos. Para aquellas propiedades que están compartidas entre ambos, como un objeto no puede tener propiedades repetidas, se debe priorizar el objeto del primer parámetro.</p>
       </li>
       <li>
-        <p><strong><a href="#"> </a></strong>:  .</p>
-        <p><code>  </code></p>
+        <p><strong><a href="#">Diferencia de objetos</a></strong>:</p>
+        <p>Igual que el anterior, pero debe devolver un objeto con las propiedades que no se repiten entre ambos objetos</p>
       </li>
       <li>
         <p><strong><a href="#"> </a></strong>:  .</p>
