agrego mas consignas

--- a/clase13/index.html
+++ b/clase13/index.html
@@ -594,12 +594,12 @@
         <p>Igual que el anterior, pero debe devolver un objeto con las propiedades que no se repiten entre ambos objetos</p>
       </li>
       <li>
-        <p><strong><a href="#"> </a></strong>:  .</p>
-        <p><code>  </code></p>
+        <p><strong><a href="#">Eliminar propiedades</a></strong>:</p>
+        <p>Crear una función que tome como argumentos un objeto y un array con strings, y devuelva el objeto sin las propiedades especificadas en el array</p>
       </li>
       <li>
-        <p><strong><a href="#"> </a></strong>:  .</p>
-        <p><code>  </code></p>
+        <p><strong><a href="#">Filtrar propiedades</a></strong>:</p>
+        <p>Crear una función que tome como argumentos un objeto y un array con strings, y devuelva el objeto con solo las propiedades especificadas en el array</p>
       </li>
       <li>
         <p><strong><a href="#"> </a></strong>:  .</p>
