agrego las ultimas consignas

--- a/clase13/index.html
+++ b/clase13/index.html
@@ -602,12 +602,16 @@
         <p>Crear una función que tome como argumentos un objeto y un array con strings, y devuelva el objeto con solo las propiedades especificadas en el array</p>
       </li>
       <li>
-        <p><strong><a href="#"> </a></strong>:  .</p>
-        <p><code>  </code></p>
+        <p><strong><a href="#">Analizando strings</a></strong>:</p>
+        <p>Crear una función que dado un string devuelva un objeto con la cantidad de letras, espacios y números que contiene. Cualquier cosa que no sea un número o un espacio cuenta como una letra</p>
       </li>
       <li>
-        <p><strong><a href="#"> </a></strong>:  .</p>
-        <p><code>  </code></p>
+        <p><strong><a href="#">Analizando párrafos</a></strong>:</p>
+        <p>Crear una función que dado un string devuelva un objeto con la cantidad de letras, palabras y oraciones.</p>
+      </li>
+      <li>
+        <p><strong><a href="#">Contar palabras</a></strong>:</p>
+        <p>Crear una función que dado un string devuelva un objeto con cada palabra que hay y la cantidad de veces que aparece. La función debe ignorar el caso ("JavaScript" y "javascript" cuentan como una misma palabra) y el objeto devuelto debe tener todas sus propiedades en minúscula </p>
       </li>
     </ul>
   </main>
