Actualizo meta tag

--- a/clase12/index.html
+++ b/clase12/index.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Clase 12 | JS</title>
   <meta name="description"
-  content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML, CSS y JavaScript. Vean la práctica de la decima clase: JavaScript.">
+  content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML, CSS y JavaScript. Vean la práctica de la 12da. clase: JavaScript.">
   <link rel="apple-touch-icon" href="https://img.icons8.com/color/48/000000/javascript--v1.png">
   <meta name="theme-color" content="rgb(232, 229, 132)">
   <meta name="twitter:card" content="summary">
   <meta property="og:type" content="website">
   <meta property="og:title" name="twitter:title" content="Clase 12 | JS">
   <meta property="og:description" name="twitter:description"
-    content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML, CSS y JavaSCript. Vean la práctica de la decima clase: JavaSCript.">
+    content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML, CSS y JavaSCript. Vean la práctica de la 12da. clase: JavaSCript.">
   <meta property="og:image" name="twitter:image"
     content="https://img.icons8.com/color/48/000000/javascript--v1.png">
   <meta property="og:url" name="twitter:url"
