--- a/clase11/index.html
+++ b/clase11/index.html
@@ -200,6 +200,13 @@
       <li>
         <p><strong><a href="#" target="_blank">calcularPorcentaje(numero, porcentaje)</a></strong>:Crear una función calcularPorcentaje que tome como argumentos un número y un porcentaje y devuelva el valor del porcentaje correspondiente al número.</p>
         <p><code>sumarPorcentaje(100, 15) // 115</code></p>
+         <h4>Ingresa ambos números y hace click en el boton CALCULAR PORCENTAJE para ver el porcentaje sumado</h4>
+        <label for="numberWithoutPercentage">Ingrese el numero: </label>
+        <input type="number" id="numberWithoutPercentage"> 
+        <label for="numberOfPercentage">Ingrese el numero del orcentaje a sumar: </label>
+        <input type="number" id="numberOfPercentage">
+        <button type="button"  onclick="getValueInputToConvertToCalculatePercentage()">CALCULAR PORCENTAJE</button> 
+        <p id="valueInputToConvertToCalculatePercentag"></p>
       </li>
       <li>
         <p><strong><a href="#" target="_blank">sumarPorcentaje(numero, porcentaje)</a></strong>: Crear una función sumarPorcentaje que tome como argumentos un número y un porcentaje y devuelva la suma de dicho número con la de su porcentaje. Usar la función calcularPorcentaje para obtener el porcentaje a sumar.</p>
