agrego la parte de JS para calcular el porcentaje

--- a/clase11/index.html
+++ b/clase11/index.html
@@ -198,12 +198,12 @@
         <p id="valueInputToGetRectanglePerimeter"></p>
       </li>
       <li>
-        <p><strong><a href="#" target="_blank">calcularPorcentaje(numero, porcentaje)</a></strong>:Crear una función calcularPorcentaje que tome como argumentos un número y un porcentaje y devuelva el valor del porcentaje correspondiente al número.</p>
-        <p><code>sumarPorcentaje(100, 15) // 115</code></p>
-         <h4>Ingresa ambos números y hace click en el boton CALCULAR PORCENTAJE para ver el porcentaje sumado</h4>
+        <p><strong><a href="#numberWithoutPercentage">calcularPorcentaje(numero, porcentaje)</a></strong>:Crear una función calcularPorcentaje que tome como argumentos un número y un porcentaje y devuelva el valor del porcentaje correspondiente al número.</p>
+        <p><code>sumarPorcentaje(100, 15) // 15</code></p>
+         <h4>Ingresa ambos números y hace click en el boton CALCULAR PORCENTAJE</h4>
         <label for="numberWithoutPercentage">Ingrese el numero: </label>
         <input type="number" id="numberWithoutPercentage"> 
-        <label for="numberOfPercentage">Ingrese el numero del orcentaje a sumar: </label>
+        <label for="numberOfPercentage">Ingrese el numero del porcentaje a sumar: </label>
         <input type="number" id="numberOfPercentage">
         <button type="button"  onclick="getValueInputToConvertToCalculatePercentage()">CALCULAR PORCENTAJE</button> 
         <p id="valueInputToConvertToCalculatePercentag"></p>
