agrego los input para sumarPorcentaje

--- a/clase11/index.html
+++ b/clase11/index.html
@@ -200,17 +200,24 @@
       <li>
         <p><strong><a href="#numberWithoutPercentage">calcularPorcentaje(numero, porcentaje)</a></strong>:Crear una función calcularPorcentaje que tome como argumentos un número y un porcentaje y devuelva el valor del porcentaje correspondiente al número.</p>
         <p><code>sumarPorcentaje(100, 15) // 15</code></p>
-         <h4>Ingresa ambos números y hace click en el boton CALCULAR PORCENTAJE</h4>
+        <h4>Ingresa ambos números y hace click en el boton CALCULAR PORCENTAJE</h4>
         <label for="numberWithoutPercentage">Ingrese el numero: </label>
         <input type="number" id="numberWithoutPercentage"> 
-        <label for="numberOfPercentage">Ingrese el numero del porcentaje a sumar: </label>
+        <label for="numberOfPercentage">Ingrese el numero del porcentaje a calcular: </label>
         <input type="number" id="numberOfPercentage">
         <button type="button"  onclick="getValueInputToConvertToCalculatePercentage()">CALCULAR PORCENTAJE</button> 
-        <p id="valueInputToConvertToCalculatePercentag"></p>
+        <p id="valueInputToConvertToCalculatePercentage"></p>
       </li>
       <li>
-        <p><strong><a href="#" target="_blank">sumarPorcentaje(numero, porcentaje)</a></strong>: Crear una función sumarPorcentaje que tome como argumentos un número y un porcentaje y devuelva la suma de dicho número con la de su porcentaje. Usar la función calcularPorcentaje para obtener el porcentaje a sumar.</p>
+        <p><strong><a href="#numberWithoutPercentageWithoutSum" >sumarPorcentaje(numero, porcentaje)</a></strong>: Crear una función sumarPorcentaje que tome como argumentos un número y un porcentaje y devuelva la suma de dicho número con la de su porcentaje. Usar la función calcularPorcentaje para obtener el porcentaje a sumar.</p>
         <p><code>sumarPorcentaje(200, 10) // 220</code></p>
+        <h4>Ingresa ambos números y hace click en el boton CALCULAR PORCENTAJE SUMADO</h4>
+        <label for="numberWithoutPercentageWithoutSum">Ingrese el numero: </label>
+        <input type="number" id="numberWithoutPercentageWithoutSum"> 
+        <label for="numberOfPercentageToSum">Ingrese el numero del porcentaje a sumar: </label>
+        <input type="number" id="numberOfPercentageToSum">
+        <button type="button"  onclick="getValueInputToConvertToCalculatePercentageSum()">CALCULAR PORCENTAJE SUMADO</button> 
+        <p id="valueInputToConvertToCalculatePercentage"></p>
       </li>
       <li>
         <p><strong><a href="#" target="_blank">restarPorcentaje(numero, porcentaje)</a></strong>: Crear una función restarPorcentaje que tome como argumentos un número y un porcentaje y devuelva la resta de dicho número con la de su porcentaje. Usar la función calcularPorcentaje para obtener el porcentaje a restar.</p>
