--- a/clase11/index.html
+++ b/clase11/index.html
@@ -220,8 +220,15 @@
         <p id="valueInputToConvertToCalculatePercentageToSum"></p>
       </li>
       <li>
-        <p><strong><a href="#" target="_blank">restarPorcentaje(numero, porcentaje)</a></strong>: Crear una función restarPorcentaje que tome como argumentos un número y un porcentaje y devuelva la resta de dicho número con la de su porcentaje. Usar la función calcularPorcentaje para obtener el porcentaje a restar.</p>
+        <p><strong><a href="#numberWithoutPercentageWithoutSubstract">restarPorcentaje(numero, porcentaje)</a></strong>: Crear una función restarPorcentaje que tome como argumentos un número y un porcentaje y devuelva la resta de dicho número con la de su porcentaje. Usar la función calcularPorcentaje para obtener el porcentaje a restar.</p>
         <p><code>restarPorcentaje(100, 15) // 85</code></p>
+        <h4>Ingresa ambos números y hace click en el boton CALCULAR PORCENTAJE RESTADO</h4>
+        <label for="numberWithoutPercentageWithoutSubstract">Ingrese el numero: </label>
+        <input type="number" id="numberWithoutPercentageWithoutSubstract"> 
+        <label for="numberOfPercentageToSubstract">Ingrese el numero del porcentaje a restar: </label>
+        <input type="number" id="numberOfPercentageToSubstract">
+        <button type="button"  onclick="getValueInputToConvertToCalculatePercentageSubstract()">CALCULAR PORCENTAJE RESTADO</button> 
+        <p id="valueInputToConvertToCalculatePercentageToSum"></p>
       </li>
       <li>
         <p><strong><a href="#" target="_blank">calcularFPS(fps, minutos)</a></strong>: FPS son cuadros por segundo (frames per second). Crear una una función calcularFPS que tome como argumentos una cantidad de cuadros por segundo y una cantidad de minutos, y devuelva cuántos cuadros hubo en esa cantidad de minutos.</p>
