agrego la lolgica de obtener rival

--- a/clase11/index.html
+++ b/clase11/index.html
@@ -241,9 +241,9 @@
         <label for="firstRival">Ingrese el primer rival: </label>
         <input type="text" id="firstRival"> 
         <label for="secondRival">Ingrese el segundo rival: </label>
-        <input type="number" id="secondRival">
+        <input type="text" id="secondRival">
         <button type="button"  onclick="getValueInputToConvertToCalculateRivals()">OBETENER COMPETENCIA</button> 
-        <p id="valueInputToConvertToCalculatePercentageToSubstract"></p>
+        <p id="valueInputToConvertToCalculateRivals"></p>
       </li>
       <li>
         <p><strong><a href="#user">generarEmail(usuario, dominio)</a></strong>: Crear una función generarEmail que tome como argumentos dos string usuario y dominio y el un string email con el formato usuario@dominio.com.</p>
