--- a/clase11/index.html
+++ b/clase11/index.html
@@ -294,12 +294,21 @@
         <p id="valueInputToIsTemperatureCold"></p>
       </li>
       <li>
-        <p><strong><a href="#" target="_blank">calcularPuntaje(facil, normal, dificil)</a></strong>: Crear una función calcularPuntaje que calcule el puntaje de un examen que consiste en ejercicios de distinto nivel. Debe tomar como argumento tres que consisten en la cantidad de ejercicios resueltos en cada nivel y devolver un número con el puntaje correspondiente. El puntaje se calcula de la siguiente forma:.</p>
+        <p><strong><a href="#easy">calcularPuntaje(facil, normal, dificil)</a></strong>: Crear una función calcularPuntaje que calcule el puntaje de un examen que consiste en ejercicios de distinto nivel. Debe tomar como argumento tres que consisten en la cantidad de ejercicios resueltos en cada nivel y devolver un número con el puntaje correspondiente. El puntaje se calcula de la siguiente forma:.</p>
         <p><code>facil: 3 puntos</code></p>
         <p><code>normal: 5 puntos</code></p>
         <p><code>dificil: 10 puntos</code></p>
         <p><code>calcularPuntaje(3, 0, 0) // 9</code></p>
         <p><code>calcularPuntaje(0, 2, 1) // 20</code></p>
+        <h4>Ingresar los 3 numeros y hace click en el boton CALCULAR PUNTAJE</h4>
+        <label for="easy">Ingrese la cantidad de ejercicios resultos en nivel FACIL: </label>
+        <input type="number" id="easy" > 
+        <label for="normal">Ingrese la cantidad de ejercicios resultos en nivel NORMAL: </label>
+        <input type="number" id="normal" > 
+        <label for="hard">Ingrese la cantidad de ejercicios resultos en nivel DIFFCIL: </label>
+        <input type="number" id="hard" > 
+        <button type="button"  onclick="getValueInputToAcceptDeposit()">CALCULAR PUNTAJE</button> 
+        <p id="valueInputToAcceptDeposit"></p>
       </li>
       <li>
         <p><strong><a href="#deposit" >aceptaDeposito(monto)</a></strong>: Crear una función aceptaDeposito que tome como argumento un número monto y devuelva true si el monto es divisible por 10 o false si no lo es.</p>
