--- a/clase11/index.html
+++ b/clase11/index.html
@@ -307,8 +307,8 @@
         <input type="number" id="normal" > 
         <label for="hard">Ingrese la cantidad de ejercicios resultos en nivel DIFFCIL: </label>
         <input type="number" id="hard" > 
-        <button type="button"  onclick="getValueInputToAcceptDeposit()">CALCULAR PUNTAJE</button> 
-        <p id="valueInputToAcceptDeposit"></p>
+        <button type="button"  onclick="getValueInputToGetScore()">CALCULAR PUNTAJE</button> 
+        <p id="valueInputToGetScore"></p>
       </li>
       <li>
         <p><strong><a href="#deposit" >aceptaDeposito(monto)</a></strong>: Crear una función aceptaDeposito que tome como argumento un número monto y devuelva true si el monto es divisible por 10 o false si no lo es.</p>
