--- a/proyecto_final/index.html
+++ b/proyecto_final/index.html
@@ -24,133 +24,25 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <!-- HEADER -->
   <header id="header">
-    <section class="logo">
-      <img src="./assets/rick_and_morty.png" alt="logo de ricky and morty">
-    </section>
-    <nav class="menu">
-      <ul>
-        <li>personajes</li>
-      </ul>
-    </nav>
+      <img  class="logo" src="./assets/rick_and_morty.png" alt="logo de ricky and morty">
   </header>
-  <main id="main">
-    <section class="personajes">
-      <h2>Personajes</h2>
-      <ul class="cards">
-        <!-- CARD 1 -->
-        <li class="cards_item">
-          <div class="card">
-            <div class="card_image"><img src="https://rickandmortyapi.com/api/character/avatar/2.jpeg"></div>
-            <div class="card_content">
-              <h2 class="card_title">Name: Morty Smith</h2>
-              <p class="card_text">Specie: Human</p>
-              <p class="card_text">Gender: Male</p>
-              <button class="btn card_btn">Read More</button>
-            </div>
-          </div>
-        </li>
-        <!-- CARD 2 -->
-        <li class="cards_item">
-          <div class="card">
-            <div class="card_image"><img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"></div>
-            <div class="card_content">
-              <h2 class="card_title">Name: Rick Sanchez</h2>
-              <p class="card_text">Specie: Human</p>
-              <p class="card_text">Gender: Male</p>
-              <button class="btn card_btn">Read More</button>
-            </div>
-          </div>
-        </li>
-        <!-- CARD 3 -->
-        <li class="cards_item">
-          <div class="card">
-            <div class="card_image"><img src="https://rickandmortyapi.com/api/character/avatar/3.jpeg"></div>
-            <div class="card_content">
-              <h2 class="card_title">Name: Summer Smith</h2>
-              <p class="card_text">Specie: Human</p>
-              <p class="card_text">Gender: Female</p>
-              <button class="btn card_btn">Read More</button>
-            </div>
-          </div>
-        </li>
-        <!-- CARD 4 -->
-        <li class="cards_item">
-          <div class="card">
-            <div class="card_image"><img src="https://rickandmortyapi.com/api/character/avatar/4.jpeg"></div>
-            <div class="card_content">
-              <h2 class="card_title">Name: Beth Smith</h2>
-              <p class="card_text">Specie: Human</p>
-              <p class="card_text">Gender: Female</p>
-              <button class="btn card_btn">Read More</button>
-            </div>
-          </div>
-        </li>
-        <!-- CARD 5 -->
-        <li class="cards_item">
-          <div class="card">
-            <div class="card_image"><img src="https://rickandmortyapi.com/api/character/avatar/5.jpeg"></div>
-            <div class="card_content">
-              <h2 class="card_title">Name: Jerry Smith</h2>
-              <p class="card_text">Specie: Human</p>
-              <p class="card_text">Gender: Male</p>
-              <button class="btn card_btn">Read More</button>
-            </div>
-          </div>
-        </li>
-        <!-- CARD 6 -->
-        <li class="cards_item">
-          <div class="card">
-            <div class="card_image"><img src="https://rickandmortyapi.com/api/character/avatar/6.jpeg"></div>
-            <div class="card_content">
-              <h2 class="card_title">Name: Abadango Cluster Princess</h2>
-              <p class="card_text">Specie: Alien</p>
-              <p class="card_text">Gender: Female</p>
-              <button class="btn card_btn">Read More</button>
-            </div>
-          </div>
-        </li>
-        <!-- CARD 7 -->
-        <li class="cards_item">
-          <div class="card">
-            <div class="card_image"><img src="https://rickandmortyapi.com/api/character/avatar/7.jpeg"></div>
-            <div class="card_content">
-              <h2 class="card_title">Name: Abradolf Lincler</h2>
-              <p class="card_text">Specie: Human"</p>
-              <p class="card_text">Gender: Male</p>
-              <button class="btn card_btn">Read More</button>
-            </div>
-          </div>
-        </li>
-        <!-- CARD 8 -->
-        <li class="cards_item">
-          <div class="card">
-            <div class="card_image"><img src="https://rickandmortyapi.com/api/character/avatar/8.jpeg"></div>
-            <div class="card_content">
-              <h2 class="card_title">Name: Adjudicator Rick</h2>
-              <p class="card_text">Specie: Human"</p>
-              <p class="card_text">Gender: Male</p>
-              <button class="btn card_btn">Read More</button>
-            </div>
-          </div>
-        </li>
-         <!-- CARD 9 -->
-         <li class="cards_item">
-          <div class="card">
-            <div class="card_image"><img src="https://rickandmortyapi.com/api/character/avatar/13.jpeg"></div>
-            <div class="card_content">
-              <h2 class="card_title">Name: Alien Googah</h2>
-              <p class="card_text">Specie: Alien"</p>
-              <p class="card_text">Gender: unknown</p>
-              <button class="btn card_btn">Read More</button>
-            </div>
-          </div>
-        </li>
-      </ul>
+  <main>
+    <section id="main">
+      <section class="personajes">
+        <h2>Personajes</h2>
+      </section>
+      <section>
+        <ul id="cards">
+          <!-- CARDS INGRESADAS CON JS-->
+        </ul>
+      </section>
     </section>
   </main>
+  <!-- FOOTER -->
   <footer>
-    <section class="dev">
+    <section class="made_by">
       <p>Practica realizada por <strong>María Eugenia Costa</strong> para el curso <strong>Front End</strong> en <strong>Ada</strong>.</p>
       <p>Podés verme en 
         <a href="https://www.linkedin.com/in/mar%C3%ADaeugeniacosta/" target="_blank" rel="noopener noreferrer"><img src="https://img.icons8.com/ios-filled/50/undefined/linkedin-circled--v1.png" alt="logo de linkedin"> </a>
@@ -158,5 +50,6 @@
       </p>
     </section>
   </footer>
+  <script src="./index.js"></script>
 </body>
 </html>
