agrego el link al proyecto final

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <div class="grid__item clase10"><a href="./clase10/index.html">Clase 10</a></div>
       <div class="grid__item clase11"><a href="./clase11/index.html">Clase 11</a></div>
       <div class="grid__item clase12"><a href="./clase12/index.html">Clase 12</a></div>
+      <div class="grid__item clase12"><a href="./proyecto_final/index.html">Proyecto final</a></div>
     </div>
   </main>
   <!-- FOOTER -->
