modifico el layout de la pagina principal que me lleva a cada clase con sus practicas

--- a/index.html
+++ b/index.html
@@ -30,16 +30,17 @@
     </header>
   <!-- MAIN -->
   <main id="main-page">
-    <div class="grid">
-      <div class="grid__item clase1"> <a href="./clase01/index.html">Clase 1</a></div>
-      <div class="grid__item clase2"><a href="./clase02/index.html">Clase 2</a></div>
-      <div class="grid__item clase3"><a href="./clase03/index.html">Clase 3</a></div>
-      <div class="grid__item clase5"><a href="./clase05/index.html">Clase 5</a></div>
-      <div class="grid__item clase7"><a href="./clase07/index.html">Clase 7</a></div>
-      <div class="grid__item clase10"><a href="./clase10/index.html">Clase 10</a></div>
-      <div class="grid__item clase11"><a href="./clase11/index.html">Clase 11</a></div>
-      <div class="grid__item clase12"><a href="./clase12/index.html">Clase 12</a></div>
-      <div class="grid__item clase12"><a href="./proyecto_final/index.html">Proyecto final</a></div>
+    <h2>Haciendo click en el número de clase podrás ver en vivo la práctica de la misma</h2>
+    <div class="grilla">
+      <div class="grilla__item clase1"> <a href="./clase01/index.html">Clase 1</a></div>
+      <div class="grilla__item clase2"><a href="./clase02/index.html">Clase 2</a></div>
+      <div class="grilla__item clase3"><a href="./clase03/index.html">Clase 3</a></div>
+      <div class="grilla__item clase5"><a href="./clase05/index.html">Clase 5</a></div>
+      <div class="grilla__item clase7"><a href="./clase07/index.html">Clase 7</a></div>
+      <div class="grilla__item clase10"><a href="./clase10/index.html">Clase 10</a></div>
+      <div class="grilla__item clase11"><a href="./clase11/index.html">Clase 11</a></div>
+      <div class="grilla__item clase12"><a href="./clase12/index.html">Clase 12</a></div>
+      <div class="grilla__item proyecto_final"><a href="./proyecto_final/index.html">Proyecto final</a></div>
     </div>
   </main>
   <!-- FOOTER -->
